--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.15.13",
 		"@mui/material": "^5.15.13",
+		"@supabase/supabase-js": "^2.48.1",
 		"axios": "^1.6.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -24,13 +25,13 @@
 		"@types/react-dom": "^18.2.17",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.17",
+		"dotenv": "^16.4.5",
 		"eslint": "^8.55.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"postcss": "^8.4.33",
 		"tailwindcss": "^3.4.1",
-		"dotenv": "^16.4.5",
 		"vite": "^5.0.8"
 	}
 }
