--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"node-cron": "^3.0.3",
+		"path": "^0.12.7",
 		"pg": "^8.14.1",
 		"supabase": "^2.20.5"
 	},
