--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^7.0.0",
 		"@supabase/supabase-js": "^2.48.1",
 		"axios": "^1.6.7",
+		"prop-types": "^15.8.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.4.0"
