--- a/client/package.json
+++ b/client/package.json
@@ -15,24 +15,24 @@
 		"@mui/icons-material": "^7.0.0",
 		"@mui/material": "^7.0.0",
 		"@supabase/supabase-js": "^2.48.1",
+		"@tailwindcss/vite": "^4.1.8",
 		"axios": "^1.6.7",
 		"prop-types": "^15.8.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0",
 		"react-router": "^7.6.2",
-		"react-router-dom": "^7.4.0"
+		"react-router-dom": "^7.4.0",
+		"tailwindcss": "^4.1.8"
 	},
 	"devDependencies": {
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
-		"autoprefixer": "^10.4.21",
 		"eslint": "^8.55.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
-		"postcss": "^8.5.4",
-		"tailwindcss": "^4.1.8",
 		"vite": "^5.0.8"
 	}
 }
